# os

./: .gitignore  .typos.toml  Cargo.toml  Makefile  README.md  build.rs  clippy.toml  fmt  kernel.img  rust-toolchain.toml  rustfmt.toml  typos.toml
.github/workflows/: ci.yml  fuzz-allocator.yml  smoke.yml
boot/: Cargo.toml  build.rs
boot/src/: boot.rs  bump.rs  init.rs  main.rs
boot/src/arch/: mod.rs
boot/src/arch/rv64/: boot.s  kernel.ld  mod.rs  paging.rs
runtime/: Cargo.toml
runtime-test/: Cargo.toml
runtime-test/src/: lib.rs
runtime/src/: lib.rs  panic.rs
runtime/src/arch/: interrupt.rs  memory.rs  mod.rs  paging.rs  region.rs
runtime/src/arch/rv64/: asm.rs  consts.rs  external.rs  mod.rs  page_fault.rs  page_table.rs  paging.rs  regs.rs  switch.rs  timer.rs  trap.rs
runtime/src/arch/rv64/trap/: exception.rs  mod.rs
runtime/src/debug/: mod.rs
runtime/src/debug/smoke/: allocator.rs  floating_point.rs  initarfs.rs  kernel_stack_overflow.rs  kernel_thread.rs  mod.rs  page_fault.rs  rust_std.rs  user_trap_stack_overflow.rs  userland.rs
runtime/src/dev/: console.rs  mod.rs  plic.rs
runtime/src/dev/dt/: cpu.rs  memory.rs  mmio.rs  mod.rs  reg.rs  util.rs
runtime/src/dev/dt/prop/: mod.rs  reg.rs
runtime/src/dev/uart/: mod.rs  ns16550.rs
runtime/src/fs/: context.rs  exec.rs  mod.rs  path.rs  tarfs.rs
runtime/src/kernel/: clock.rs  console.rs  dt.rs  file.rs  init.rs  mod.rs  per_core.rs  scheduler.rs  thread.rs  timer.rs
runtime/src/kernel/console/: buffer.rs  fnode.rs  mod.rs
runtime/src/kernel/sync/: freezable.rs  lazy_lock.rs  mod.rs  spinlock.rs
runtime/src/kernel/syscall/: close.rs  exit.rs  mod.rs  open.rs  read.rs  sleep.rs  write.rs
runtime/src/kernel/thread/: context.rs  id.rs  mod.rs  stack.rs  waker.rs
runtime/src/mm/: addr.rs  buddy.rs  context.rs  mod.rs  pages.rs  region.rs  slab.rs
runtime/src/mm/page_meta/: buddy.rs  mod.rs  pages.rs  reserved.rs  slab.rs  uninit.rs
runtime/src/util/: consts.rs  linked_list.rs  macro.rs  mod.rs
scripts/: check-boot-sections.py  ports.py  run-until-output.sh  rustfmt  setup.sh
src/: console.rs  lib.rs  machine.rs  main.rs  panic.rs
src/arch/: interrupt.rs  mod.rs  region.rs
src/arch/rv64/: asm.rs  boot.rs  boot.s  consts.rs  kernel.ld  mod.rs  regs.rs  switch.rs  timer.rs  trap.rs
src/arch/rv64/paging/: mod.rs  page_table.rs
src/boot/: bump.rs  mod.rs  phya.rs
src/debug/: mod.rs
src/debug/smoke/: allocator.rs  mod.rs
src/dev/: dt.rs  mod.rs
src/dev/dt/: memory.rs  mod.rs
src/dev/test_data/: qemu_virt.dtb
src/dev/uart/: mod.rs  ns16550.rs
src/init/: mod.rs
src/kernel/: clock.rs  init.rs  mod.rs  panic.rs  scheduler.rs  thread.rs
src/kernel/sync/: freezable.rs
src/machine/rv64/virt/: kernel.ld
src/mm/: addr.rs  buddy.rs  mod.rs  page.rs  region.rs  slab.rs
src/mm/page_meta/: buddy.rs  mod.rs  slab.rs
src/sync/: spinlock.rs
src/util/: consts.rs  linked_list.rs  mod.rs
src/util/debug/: mod.rs
src/util/debug/fuzz/: allocator.rs
userland/: Makefile  ports.toml
userland/patches/micropython/: 0001-just-copy-for-os.patch  0002-feat-port-for-os.patch  0003-feat-add-file-descriptor-syscalls.patch  0004-refactor-adapt-user-syscall-result-ABI.patch  0005-feat-enable-core-and-read-only-library-imports.patch  0006-feat-enable-double-precision-math-module.patch  series
userland/patches/rust/: 0001-feat-port-Rust-std-to-OS-userland.patch  0002-fix-build-Rust-std-as-rlib-only.patch  series
userland/rootfs/: eratosthenes.py  rk4_harmonic_oscillator.py  smoke.py
userland/rust-std/: Cargo.toml  Makefile
userland/rust-std/src/: main.rs
userland/simple/: Makefile  just_return.rs  simple_print.rs
userland/simple/lib/: Makefile  lib.rs  syscall.rs
