[workspace]
members = [
    "boot",
    "runtime",
    "runtime-test",
]
resolver = "3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
lto = "thin"

[workspace.lints.clippy]
large_stack_frames = "deny"
large_stack_arrays = "deny"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
runtime = { path = "runtime" }

arrayvec = { version = "0.7.7", default-features = false }
bitflags = { version = "2.13.0", default-features = false }
crossbeam-utils = { version = "0.8", default-features = false }
derive_more = { version = "2", default-features = false, features = ["full"] }
either = { version = "1.16.0", default-features = false }
elf = { version = "0.8", default-features = false }
extend = { version = "1.2", default-features = false }
hashbrown = { version = "0.17.1", default-features = false, features = ["default-hasher"] }
tar-no-std = { version = "0.4.2", default-features = false }
thiserror = { version = "2", default-features = false }
winnow = { version = "1.0.3", default-features = false, features = ["binary"] }
