[package]
name = "boot"
version.workspace = true
edition.workspace = true

[features]
smoke = ["runtime/smoke"]
smoke-allocator = ["runtime/smoke-allocator"]
smoke-initarfs = ["runtime/smoke-initarfs"]
smoke-page-fault = ["runtime/smoke-page-fault"]
smoke-kernel-thread = ["runtime/smoke-kernel-thread"]
smoke-userland = ["runtime/smoke-userland"]

[lints]
workspace = true

[[bin]]
name = "boot"
path = "src/main.rs"
test = false
bench = false

[dependencies]
arrayvec.workspace = true
runtime.workspace = true
