[package]
name = "boot"
version.workspace = true
edition.workspace = true

[features]
smoke = ["runtime/smoke"]

smoke-allocator = ["runtime/smoke-allocator"]
smoke-floating-point = ["runtime/smoke-floating-point"]
smoke-initarfs = ["runtime/smoke-initarfs"]
smoke-kernel-thread = ["runtime/smoke-kernel-thread"]
smoke-page-fault = ["runtime/smoke-page-fault"]
smoke-userland = ["runtime/smoke-userland"]

smoke-kernel-stack-overflow = ["runtime/smoke-kernel-stack-overflow"]
smoke-user-trap-stack-overflow = ["runtime/smoke-user-trap-stack-overflow"]

[lints]
workspace = true

[[bin]]
name = "boot"
path = "src/main.rs"
test = false
bench = false

[dependencies]
arrayvec.workspace = true
runtime.workspace = true
