[package]
name = "runtime"
version.workspace = true
edition.workspace = true

[lib]
test = false

[lints]
workspace = true

[features]
smoke = [
    "smoke-allocator",
    "smoke-initarfs",
    "smoke-page-fault",
    "smoke-kernel-thread",
    "smoke-floating-point",
    "smoke-rust-std",
    "smoke-userland"
]

smoke-allocator = []
smoke-floating-point = []
smoke-initarfs = []
smoke-kernel-thread = []
smoke-page-fault = []
smoke-rust-std = []
smoke-userland = []

# Destructive tests, each run in its own QEMU instance.
smoke-kernel-stack-overflow = []

[dependencies]
arrayvec.workspace = true
bitflags.workspace = true
crossbeam-utils.workspace = true
derive_more.workspace = true
either.workspace = true
elf.workspace = true
extend.workspace = true
hashbrown.workspace = true
tar-no-std.workspace = true
thiserror.workspace = true
winnow.workspace = true
